implémentation API + Bug connection DB
